minor css changes for video gallery + z-index fix
SRFCMSAL-426

--- a/source/_patterns/20-molecules/medium/medium.scss
+++ b/source/_patterns/20-molecules/medium/medium.scss
@@ -126,7 +126,7 @@
 
 .medium--video-gallery {
   margin: 0;
-  height: 100%;
+  width: 100%;
   align-items: stretch;
 
   .media-caption--video {
