--- a/source/_patterns/20-molecules/video-gallery/video-gallery.scss
+++ b/source/_patterns/20-molecules/video-gallery/video-gallery.scss
@@ -96,12 +96,10 @@
     }
 
     .carousel__link--prev {
-      left: -58px;
       background-image: url('../img/carousel/previous_no_bg.svg');
     }
 
     .carousel__link--next {
-      right: -58px;
       background-image: url('../img/carousel/next_no_bg.svg');
     }
   }
